--- a/dashboard.html
+++ b/dashboard.html
@@ -73,8 +73,9 @@
           <h2 class="header">Dashboard</h2>
 
           <div class="top-bar-icons">
-            <i class="fa-solid fa-bell"> </i>
+            <i class="fa-solid fa-2x fa-bell"> </i>
             <span class="user-info">
+            <i class="fa-solid fa-2x fa-bars"> </i>
               <img src="./images/mylogo.png" alt="">
               <h3>Joshua ihimire</h3>
             </span>
