--- a/dashboard.html
+++ b/dashboard.html
@@ -70,12 +70,16 @@
 
       <div class="dashboard">
         <div class="top-bar">
+              <button>
+              <i class="fa-solid fa-bars"> </i>
+              </button>
           <h2 class="header">Dashboard</h2>
 
           <div class="top-bar-icons">
-            <i class="fa-solid fa-2x fa-bell"> </i>
+            <button>
+            <i class="fa-solid fa-bell"> </i>
+            </button>
             <span class="user-info">
-            <i class="fa-solid fa-2x fa-bars"> </i>
               <img src="./images/mylogo.png" alt="">
               <h3>Joshua ihimire</h3>
             </span>
@@ -116,14 +120,44 @@
 
                 <div class="savings">
                   <div class="savings-head-percentage">
-                    <h5>Total Balance</h5>
+                    <h5>Total Savings</h5>
 
                     <div class="percentage">
-                      <i class="fa-solid fa-circle-arrow-up"></i>
-                      <h5>2.36%</h5>
+                      <i class="fa-solid fa-circle-arrow-down"></i>
+                      <h5>5.36%</h5>
                     </div>
                   </div>
-                  <h2>USD 10,000.00</h2>
+                  <h2>USD 5,000.00</h2>
+                  
+                  <div>
+  <canvas id="myChart"></canvas>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+<script>
+  const ctx = document.getElementById('myChart');
+
+  new Chart(ctx, {
+    type: 'bar',
+    data: {
+      labels: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct','Nov', 'Dec'],
+      datasets: [{
+        label: 'Monthly Savings',
+        data: [10,15,12,13,11,20,18, 8, 5, 2,10, 3],
+        borderWidth: 1
+      }]
+    },
+    options: {
+      scales: {
+        y: {
+          beginAtZero: true
+        }
+      }
+    }
+  });
+</script>
+
                 </div>
               </div>
 
@@ -206,6 +240,7 @@
        
       </div>
     </div>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     <!-- mobile veiw -->
   </body>
