--- a/dashboard.html
+++ b/dashboard.html
@@ -80,7 +80,7 @@
 
           <div class="top-bar-icons">
             <button>
-            <i class="fa-solid fa-2x fa-bell"> </i>
+            <i class="fa-regular fa-2x fa-bell"> </i>
             </button>
             <span class="user-info">
               <img src="./images/mylogo.png" alt="">
@@ -166,52 +166,7 @@
 
               <div class="second-row-dashboard">
                 <div class="statistics-savings">
-                  <!DOCTYPE html>
-<html>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
-<body>
-
-<canvas id="myChart" style="width:100%;max-width:600px"></canvas>
-
-<script>
-var xValues = ["Italy", "France", "Spain", "USA", "Argentina"];
-var yValues = [55, 49, 44, 24, 15];
-var barColors = [
-  "#b91d47",
-  "#00aba9",
-  "#2b5797",
-  "#e8c3b9",
-  "#1e7145"
-];
-
-new Chart("myChart", {
-  type: "doughnut",
-<canvas id="myChart" style="width:100%;max-width:600px"></canvas>
-
-<script>
-var xValues = ["Italy", "France", "Spain", "USA", "Argentina"];
-var yValues = [55, 49, 44, 24, 15];
-var barColors = [
-  "#b91d47",
-  "#00aba9",
-  "#2b5797",
-  "#e8c3b9",
-  "#1e7145"
-];
-
-new Chart("myChart", {
-  type: "doughnut",
-  data: {
-    labels: xValues,
-    datasets: [{
-      backgroundColor: barColors,
-      data: yValues
-    }]
-  },
-  options: {
-    title: {
-      display: true,
-      text: "World Wide Wine Production 2018"
+                  
                 </div>
               </div>
             </div>
@@ -326,7 +281,6 @@ new Chart("myChart", {
     </script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js">
 </script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
 
     
   </body>
