font family and user profile for mobile

--- a/dashboard.html
+++ b/dashboard.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Noto+Serif&family=Work+Sans&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
     <link rel="stylesheet" href="dashboard.css" />
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <title>Document</title>
   </head>
   <body>
@@ -15,6 +18,10 @@
       <div class="menu-side">
         <div class="logo">
           <h2>Plutus</h2>
+        </div>
+        <div class="mobile-user-profile">
+        <img src="./images/mylogo.png" alt="">
+          <h3>Josh Ihimire</h3>
         </div>
         <div class="links">
           <div class="primary-links">
@@ -27,25 +34,28 @@
                 <h4>Dashboard</h4>
               </span>
             </a>
+            <br>
             <a href="">
               <span>
                 <i class="fa-solid fa-share"></i>
                 <h4>Transfer</h4>
               </span>
             </a>
+            <br>
             <a href="">
               <span>
                 <i class="fa-solid fa-arrow-right-arrow-left"></i>
                 <h4>Transactions</h4>
               </span>
             </a>
+            <br>
             <a href="">
               <span>
                 <i class="fa-solid fa-credit-card"></i>
                 <h4>Accounts and Cards</h4>
               </span>
             </a>
-
+            <br>
             <a href="">
               <span>
                 <i class="fa-solid fa-chart-line"></i>
@@ -60,7 +70,7 @@
                 <h4>Settings</h4>
               </span>
             </a>
-
+            <br>
             <a href="">
               <span>
                 <i class="fa-solid fa-right-from-bracket"></i>
@@ -265,8 +275,5 @@
         },
       });
     </script>
-
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </body>
 </html>
