--- a/dashboard.html
+++ b/dashboard.html
@@ -7,6 +7,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="dashboard.css" />
     <title>Document</title>
   </head>
@@ -35,7 +36,7 @@
             </a>
             <a href="">
               <span>
-                <i class="fa-solid fa-arrow-right-arrow-left"></i>
+                <i class="fa-solid fa-arrow-left-arrow-right"></i>
                 <h4>Transactions</h4>
               </span>
             </a>
@@ -83,7 +84,7 @@
               <i class="fa-regular fa-2x fa-bell"> </i>
             </button>
             <span class="user-info">
-              <img src="./images/mylogo.png" alt="" />
+              <img src="./images/Rectangle 3 (1).png" alt="" />
               <h3>Joshua ihimire</h3>
             </span>
           </div>
@@ -140,7 +141,9 @@
             </div>
 
             <div class="second-row-dashboard">
-              <div class="statistics-savings"></div>
+              <div class="statistics-savings">
+                <!-- Erwin your code goes here -->
+              </div>
             </div>
           </div>
 
@@ -265,8 +268,5 @@
         },
       });
     </script>
-
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </body>
 </html>
