--- a/index.html
+++ b/index.html
@@ -41,8 +41,10 @@
                     <br>
                     <br>
                     <br>
+                    <form action="./verify.html">
                         <input type="submit" name="" value="Login" id="login-btn">
                         <a href="">Forgot your password?</a>
+                    </form>
                 </div>
                 
             </div>
