added doughnut chart

--- a/account.html
+++ b/account.html
@@ -1,66 +1,48 @@
 <!DOCTYPE html>
-<!-- Coding By CodingNepal - codingnepalweb.com -->
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <title>OTP Verification Form</title>
-    <link rel="stylesheet" href="./accounts.css" />
-    <!-- Boxicons CSS -->
-    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
-   <script src="script.js" defer></script>
-  </head>
-  <body>
-    <div class="container">
-      <header>
-        <i class="bx bxs-check-shield"></i>
-      </header>
-      <h4>Enter OTP Code</h4>
-      <form action="#">
-        <div class="input-field">
-          <input type="number" />
-          <input type="number" disabled />
-          <input type="number" disabled />
-          <input type="number" disabled />
-        </div>
-        <button>Verify OTP</button>
-      </form>
-    </div>
-    <script>
- const inputs = document.querySelectorAll("input"),
-  button = document.querySelector("button");
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js">
 
-inputs.forEach((input, index1) => {
-  input.addEventListener("keyup", (e) => {
-    const currentInput = input,
-      nextInput = input.nextElementSibling,
-      prevInput = input.previousElementSibling;
-    if (currentInput.value.length > 1) {
-      currentInput.value = "";
-      return;
-    }
-    if (nextInput && nextInput.hasAttribute("disabled") && currentInput.value !== "") {
-      nextInput.removeAttribute("disabled");
-      nextInput.focus();
-    }
-    if (e.key === "Backspace") {
-      inputs.forEach((input, index2) => {
-        if (index1 <= index2 && prevInput) {
-          input.setAttribute("disabled", true);
-          input.value = "";
-          prevInput.focus();
-        }
-      });
-    }
-    if (!inputs[3].disabled && inputs[3].value !== "") {
-      button.classList.add("active");
-      return;
-    }
-    button.classList.remove("active");
-  });
+const ctx = document.getElementById("my-Chart");
+
+new Chart(ctx, {
+  type: "doughnut",
+  data: {
+    labels: [
+      "Jan",
+      "Feb",
+      "Mar",
+      "Apr",
+      "May",
+      "Jun",
+      "Jul",
+      "Aug",
+      "Sep",
+      "Oct",
+      "Nov",
+      "Dec",
+    ],
+    datasets: [
+      {
+        label: "Monthly Savings",
+        data: [10, 15, 12, 13, 11, 20, 18, 8, 5, 2, 10, 3],
+        borderWidth: 1,
+      },
+    ],
+  },
+  options: {
+
+  },
 });
-window.addEventListener("load", () => inputs[0].focus());
+  </script>
+
+  <title>Document</title>
+</head>
+<body>
+  <script>
+  
     </script>
-  </body>
+</body>
 </html>
